fix(docs): banner truncating on mobile
default nextra functionality, but this seems worth overriding
to be scrollable

--- a/docs-site/globals.css
+++ b/docs-site/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* allow banner to overflow with text for smaller screens, being scrollable */
+.nextra-banner-container > div {
+  overflow-x: auto;
+  text-overflow: unset;
+}
